bat.bool1.monkeytrouble.MonkeyTrouble.scala.error
Compilation error:
MonkeyTrouble:14: error: not found: value ||
  if (aSmile==false && bSmile==true)||(aSmile==true && bSmile==false)
                                    ^