bat.bool1.monkeytrouble.MonkeyTrouble.scala.code
/*def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {
  if (aSmile==true && bSmile==true) || (aSmile==false && bSmile==false){
    return true
  }
  else
  	return false
  
  
    
  } */

def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {
  if (aSmile==false && bSmile==true)||(aSmile==true && bSmile==false)
  {
    return false
  }
  else
  return true

  
    
  } 
                                                            
